--- a/Esempi/Tesi/titolo.sty
+++ b/Esempi/Tesi/titolo.sty
@@ -5,6 +5,7 @@
 		\includegraphics[width=0.25\linewidth]{unipd.png}
 	\end{center}
 	
+	\vspace{10mm}
 	\begin{center}
 		\begin{Large}
 			\textbf{University of Padova}
@@ -23,6 +24,7 @@
 		\begin{huge}
 			\bfseries
 			Inglorious Measures: \\ A Linear Mixed-Effects Model approach for a Rasch analysis of implicit measure accuracy and time responses
+			\par
 		\end{huge}
 		
 		
